[gd_scene load_steps=12 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Health/Health.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 53
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 156.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -229.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 2 )
text = "Dodge & Shoot
the Balls!"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -123.364
margin_top = -215.813
margin_right = 117.636
margin_bottom = -115.813
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Health" parent="." instance=ExtResource( 3 )]
position = Vector2( 292.083, 19.5954 )

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -29.5
margin_right = 132.5
margin_bottom = 117.5
__meta__ = {
"_edit_group_": true
}

[node name="VBox_L" type="VBoxContainer" parent="HBox"]
margin_right = 117.0
margin_bottom = 147.0
__meta__ = {
"_edit_group_": true
}

[node name="LevelLabel" type="Label" parent="HBox/VBox_L"]
margin_right = 117.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "Difficulty"

[node name="MusicLabel" type="Label" parent="HBox/VBox_L"]
margin_top = 34.0
margin_right = 117.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 7 )
text = "Music "

[node name="TrailLabel" type="Label" parent="HBox/VBox_L"]
margin_top = 65.0
margin_right = 117.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 7 )
text = "Trail"

[node name="SizeLabel" type="Label" parent="HBox/VBox_L"]
margin_top = 96.0
margin_right = 117.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 8 )
text = "Size"

[node name="MarginContainer" type="MarginContainer" parent="HBox"]
margin_left = 121.0
margin_right = 181.0
margin_bottom = 147.0
rect_min_size = Vector2( 60, 0 )

[node name="VBox_R" type="VBoxContainer" parent="HBox"]
margin_left = 185.0
margin_right = 261.0
margin_bottom = 147.0

[node name="DifficultySlider" type="HSlider" parent="HBox/VBox_R"]
margin_right = 76.0
margin_bottom = 16.0
max_value = 10.0
tick_count = 6
ticks_on_borders = true

[node name="MusicOnOffButton" type="CheckButton" parent="HBox/VBox_R"]
margin_top = 20.0
margin_right = 76.0
margin_bottom = 60.0
pressed = true

[node name="TrailOnOffButton" type="CheckButton" parent="HBox/VBox_R"]
margin_top = 64.0
margin_right = 76.0
margin_bottom = 104.0
pressed = true

[node name="SizeSlider" type="HSlider" parent="HBox/VBox_R"]
margin_top = 108.0
margin_right = 76.0
margin_bottom = 124.0
min_value = 1.0
max_value = 5.0
value = 3.0
tick_count = 5
ticks_on_borders = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
